Fixing CI pipeline failures.